Added basic Allure, Updated tests with tags